--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,10 @@
-<h1>My name is <%= @name %></h1>
-<img src="http://bit.ly/1eze8aE" style="border:10px double red">
+<% if @name.nil? %>
+  <form action="/named-cat">
+    <input type="text" name="name">
+    <input type="text" name="age">
+    <input type="submit" value="Submit">
+  </form>
+<% else %>
+  <h1>My name is <%= @name %></h1>
+  <img src="http://bit.ly/1eze8aE" style="border:10px double red">
+<% end %> 
